--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "node --test"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.0.0",
     "box-node-sdk": "^10"
   }
 }
